--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Viscoin</title>
+        <title>Viscoin.net</title>
 		<link rel="icon" href="/logo.svg">
-        <meta name="theme-color" content="#090a16">
-        <meta name="title" content="Viscoin">
+        <meta name="theme-color" content="#1c1c1e">
+        <meta name="title" content="Viscoin.net">
         <meta name="description" content="Viscoin is an experimental digital currency that enables instant payments to anyone, anywhere in the world.">
 		<meta name="apple-mobile-web-app-title" content="Viscoin">
-		<meta name="application-name" content="Viscoin">
-		<meta property="og:title" content="Viscoin" />
+		<meta name="application-name" content="Viscoin.net">
+		<meta property="og:title" content="Viscoin.net" />
 		<meta name="og:description" content="Viscoin is an experimental digital currency that enables instant payments to anyone, anywhere in the world.">
 		<meta property="og:image" content="/logo.svg" />
     </head>
