--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<link rel="icon" href="/logo.svg">
         <meta name="theme-color" content="#1c1c1e">
         <meta name="title" content="Viscoin.net">
-        <meta name="description" content="Viscoin is an experimental digital currency that enables instant payments to anyone, anywhere in the world.">
+        <meta name="description" content="Viscoin is an experimental digital currency that lives on the internet. Payments can be made by anyone, to anyone, at any time, anywhere in the world, and are carried out collectively by the network with the use of peer-to-peer technology. Cryptography makes trusting a central authority obsolete when anyone with a computer can verify that a transaction is valid.">
 		<meta name="apple-mobile-web-app-title" content="Viscoin">
 		<meta name="application-name" content="Viscoin.net">
 		<meta property="og:title" content="Viscoin.net" />
-		<meta name="og:description" content="Viscoin is an experimental digital currency that enables instant payments to anyone, anywhere in the world.">
+		<meta name="og:description" content="Viscoin is an experimental digital currency that lives on the internet. Payments can be made by anyone, to anyone, at any time, anywhere in the world, and are carried out collectively by the network with the use of peer-to-peer technology. Cryptography makes trusting a central authority obsolete when anyone with a computer can verify that a transaction is valid.">
 		<meta property="og:image" content="/logo.svg" />
     </head>
     <body>
